Grease pencil in "Edit Strokes" mode: Snap tool does not snap points to active object #49632

Closed
opened 2016-10-11 19:22:29 +02:00 by Gaia Clary · 11 comments
Member

System Information
windows 7 nvidia/titan

Blender Version
Broken: 3ee5ce1

Short description of error

Snapping a grease pencil point to the active object does not work. It looks like snapping works for all objects except for the active object.

Exact steps for others to reproduce the error

  • Select any object in the scene
  • go to "Edit Strokes" mode
  • try to snap a grease pencil point to a vertex of the active object (does not work).
  • try to snap a grease pencil point to a vertex of another object in the scene (works).

This could be intentional behavior, a missing feature, or a bug.

**System Information** windows 7 nvidia/titan **Blender Version** Broken: 3ee5ce1 **Short description of error** Snapping a grease pencil point to the active object does not work. It looks like snapping works for all objects except for the active object. **Exact steps for others to reproduce the error** - Select any object in the scene - go to "Edit Strokes" mode - try to snap a grease pencil point to a vertex of the active object (does not work). - try to snap a grease pencil point to a vertex of another object in the scene (works). This could be intentional behavior, a missing feature, or a bug.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

What sort of snapping are we talking about here? The Shift-S or the transform snapping?

What sort of snapping are we talking about here? The Shift-S or the transform snapping?
Author
Member

Transform snapping:

  • Enable the snap tool in the footer of the 3D View
  • Set Snap Element to "Vertex" in the footer of the 3D View
  • Enter Stroke Edit mode
  • Select a point
  • grab the point and move it around in the scene.

The point snaps to vertices (or bone ends) of all other objects but the active object seems to be fully ignored, even when the active object is Edit mode.

Transform snapping: - Enable the snap tool in the footer of the 3D View - Set Snap Element to "Vertex" in the footer of the 3D View - Enter Stroke Edit mode - Select a point - grab the point and move it around in the scene. The point snaps to vertices (or bone ends) of all other objects but the active object seems to be fully ignored, even when the active object is Edit mode.

Added subscriber: @MarcoArdito

Added subscriber: @MarcoArdito

I confirm this, and as a workaround I only found to make another "dummy" object active, before starting strokes editing.

Then GP snaps to my "intended" object (and to any other object except the dummy active one), although it doesn't even stick on the surface for this (and GP stroke placement mode was, and still is, "surface"), but this should be another matter perhaps...

I confirm this, and as a workaround I only found to make another "dummy" object active, before starting strokes editing. Then GP snaps to my "intended" object (and to any other object except the dummy active one), although it doesn't even stick on the surface for this (and GP stroke placement mode was, and still is, "surface"), but this should be another matter perhaps...

This issue was referenced by 997a210b08

This issue was referenced by 997a210b086f93a881b10cb1c3ba6bedcb33676a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@GaiaClary, thanks for pointing out the bug ;)

@GaiaClary, thanks for pointing out the bug ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49632
No description provided.