Fix T49632: Grease pencil in "Edit Strokes" mode: Snap tool did not snap points to active object A simple confusion between enums: ~SNAP_NOT_ACTIVE~